--- a/src/app/ui/components/about-us/about-us.component.html
+++ b/src/app/ui/components/about-us/about-us.component.html
@@ -15,7 +15,7 @@
     <section class="content-section">
       <h2>What did we set out for?</h2>
       <p>
-        TUMDEX ( Tüm Trading )dex  was founded by a group of people with trading experience in different geographies. 
+        TUMDEX ( Tüm Trading ) was founded by a group of people with trading experience in different geographies. 
         Providing consultancy services to the leading companies of the business world, TUMDEX ( Tüm Trading ) aims 
         to ensure the successful conclusion of all regional and global commercial operations with its 
         knowledgeable, talented, and experienced human resources.
