--- a/src/app/ui/components/home/home.component.scss
+++ b/src/app/ui/components/home/home.component.scss
@@ -265,7 +265,7 @@ body {
 .categories {
   position: relative; // Ok butonlarının yerleşimini kolaylaştırır
   background-color: $light-text;
-  margin: 2rem;
+  margin: 2rem 0 1rem 0;
   padding: 1rem 0;
 
   .category-header {
