--- a/src/app/ui/components/category/category.component.html
+++ b/src/app/ui/components/category/category.component.html
@@ -11,15 +11,24 @@
 
     <!-- Category Header -->
     <div class="card mb-4 border-0" style="background-color:#333333;">
-      <div class="row g-0">
+      <div class="row g-0" style="max-height: 300px;">
         <!-- Text content on the left -->
         <div class="col-7 d-flex align-items-center text-white">
-          <div class="p-3 p-md-4">
+          <div class="p-3 p-md-4" >
             <h1 class="category-name display-6 border-bottom border-3 pb-2 mb-3"
-              style="border-color: #e53935 !important; width: fit-content; font-size: calc(1.5rem + 0.5vw);">
+              style="border-color: #e53935 !important; width: fit-content; font-size: calc(1.5rem + 2vw); font-variant: small-caps; font-weight: 600;">
               {{ category?.name }}
             </h1>
-            <p class="lead mb-0" style="font-size: 0.9rem; font-weight: 400;">{{ category?.title }}</p>
+            <div class="category-content-container">
+              <ng-container *ngIf="parsedCategories.length > 0">
+                <div class="category-column" *ngFor="let category of parsedCategories">
+                  <h2>{{ category.title }}</h2>
+                  <ul>
+                    <li *ngFor="let item of category.items">{{ item }}</li>
+                  </ul>
+                </div>
+              </ng-container>
+            </div>
           </div>
         </div>
         <!-- Image container with no padding/margin -->
