--- a/src/app/ui/components/category/category.component.scss
+++ b/src/app/ui/components/category/category.component.scss
@@ -21,6 +21,59 @@ $link-color: #0000ee;
   color: $text-color;
 }
 
+.category-content-container {
+  display: flex !important;
+  flex-direction: row !important;
+  gap: 40px !important;
+  margin-top: 15px !important;
+  
+  .category-column {
+    h2 {
+      color: white !important;
+      //font-size: 1rem !important;
+      font-weight: 500 !important;
+      //margin-bottom: 15px !important;
+      font: 400 1rem / 1rem Roboto, sans-serif !important;
+    }
+    
+    ul {
+      list-style-type: disc !important;
+      padding-left: 15px !important;
+      margin: 0 !important;
+      
+      li {
+        color: white !important;
+        font-size: 0.7rem !important;
+        line-height: 1.6 !important;
+        padding: 0 !important;
+        margin: 0 !important;
+      }
+    }
+  }
+  
+  @media (max-width: 768px) {
+    display: none !important;
+    flex-direction: column !important;
+    gap: 15px !important;
+  }
+}
+
+.card.mb-4 .col-7 .lead {
+  /* Default styling */
+  line-height: 1.5;
+  
+  /* Modifications for mobile view */
+  @media (max-width: 768px) {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3; /* Limit to 3 lines on mobile */
+    overflow: hidden;
+    line-height: 1.3; /* Reduced line spacing */
+    max-height: 3.9em; /* Fallback for browsers that don't support line-clamp */
+    max-width: 13rem;
+  }
+}
+
 .card.mb-4 {
   background-color: #333333;
   position: relative;
@@ -67,6 +120,8 @@ $link-color: #0000ee;
     font-size: 1.4rem !important;
     margin-bottom: 0.5rem !important;
     padding-bottom: 0.5rem !important;
+    line-height: 1.2 !important; /* Reduced line spacing */
+    margin-left: -40px;
   }
   
   @media (max-width: 576px) {
