--- a/src/app/ui/components/product/ui-product-list/ui-product-list.component.html
+++ b/src/app/ui/components/product/ui-product-list/ui-product-list.component.html
@@ -13,7 +13,7 @@
   
   <!-- Ürün yoksa ve yükleme bittiyse -->
   <div class="no-results-container" *ngIf="products.length === 0 && !loading">
-    <div class="alert alert-info text-center">
+    <div class="alert alert-warning text-center">
       <i class="fas fa-box-open fa-2x mb-2"></i>
       <p>The product was not found in this category.</p>
     </div>
